--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -12182,16 +12182,15 @@ on current Chronojump version.</property>
                                                             <widget class="GtkSpinButton" id="spin_encoder_capture_inertial">
                                                             <property name="can_focus">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Inertia Momentum</property>
+                                                            <property name="tooltip">Inertia Momentum in Kg*cm^2</property>
                                                             <property name="invisible_char">●</property>
                                                             <property name="invisible_char_set">True</property>
                                                             <property name="primary_icon_activatable">False</property>
                                                             <property name="secondary_icon_activatable">False</property>
                                                             <property name="primary_icon_sensitive">True</property>
                                                             <property name="secondary_icon_sensitive">True</property>
-                                                            <property name="adjustment">0.01 0 1 0.01 0.01 0</property>
+                                                            <property name="adjustment">100 0 5000 1 10 0</property>
                                                             <property name="climb_rate">1</property>
-                                                            <property name="digits">3</property>
                                                             <property name="snap_to_ticks">True</property>
                                                             <property name="numeric">True</property>
                                                             </widget>
@@ -12250,7 +12249,7 @@ on current Chronojump version.</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="has_tooltip">True</property>
-                                                            <property name="tooltip" translatable="yes">Inertia Momentum</property>
+                                                            <property name="tooltip" translatable="yes">Diameter of inertia machine axis</property>
                                                             <property name="invisible_char">●</property>
                                                             <property name="invisible_char_set">True</property>
                                                             <property name="primary_icon_activatable">False</property>
