--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -21916,6 +21916,7 @@ comments</property>
                         <property name="secondary_icon_sensitive">True</property>
                         <property name="adjustment">15 1 200 0.10000000000000001 10 0</property>
                         <property name="climb_rate">1</property>
+                        <property name="digits">1</property>
                         <property name="snap_to_ticks">True</property>
                         <property name="numeric">True</property>
                         <property name="update_policy">if-valid</property>
